--- a/src/makefile
+++ b/src/makefile
@@ -1,12 +1,12 @@
 CC=gcc -ansi
 CUDACC=nvcc
 
-Objs=main.o fftcuda.o datamanager.o
+Objs=main.o
 
 BinaryName=gpuholography
 
-CFLAGS=-O2 -g -Wall -Werror -Wextra -std=c99 -I. -I/usr/local/cuda/include -lcudart -lm
-LDFLAGS=-Wall -O2 -g -L/usr/local/lib -std=c99 -L/usr/local/cuda/lib64 -lcudart -lcuda
+CFLAGS=-O2 -g -Wall -Werror -Wextra -std=c99 -I. -I/usr/local/cuda/include -I/usr/local/lib -lcudart -lm -ltiff
+LDFLAGS=-Wall -O2 -g -L/usr/local/lib -std=c99 -L/usr/local/cuda/lib64 -lcudart -lcuda -ltiff
 CUDACCFLAGS=-O2 -g -I. -I/usr/local/cuda/include
 
 
