modified:   main.c 	modified:   makefile 	new file:   tiffman.c 	new file:   tiffman.h
Need to look at old version

--- a/src/makefile
+++ b/src/makefile
@@ -1,11 +1,11 @@
 CC=gcc -ansi
 CUDACC=nvcc
 
-Objs=main.o matrix.o cufft.o
+Objs=main.o matrix.o cufft.o tiffman.o
 
 BinaryName=gpuholography
 
-CFLAGS=-O2 -L/usr/local/cuda/lib64 -I. -I/usr/local/cuda/include -I/usr/local/lib -lcuda -lcudart -lm -ltiff
+CFLAGS=-O2 -Wall -Werror -L/usr/local/cuda/lib64 -I. -I/usr/local/cuda/include -I/usr/local/lib -lcuda -lcudart -lm -ltiff
 LDFLAGS=-O2 -L/usr/local/lib  -L/usr/local/cuda/lib64 -lcudart -lcuda -ltiff -lm
 CUDACCFLAGS=-G -use_fast_math -arch=sm_20 --ptxas-options=-v -I. -I/usr/local/cuda/include -I/usr/local/cuda/lib64
 
@@ -13,7 +13,7 @@ CUDACCFLAGS=-G -use_fast_math -arch=sm_20 --ptxas-options=-v -I. -I/usr/local/cu
 all: $(Objs) $(BinaryName)
 
 %.o:	%.c
-	$(CUDACC) -c $<
+	$(CC) $(CFLAGS) -c $<
 
 %.o: %.cu
 	$(CUDACC) -c $(CUDACCFLAGS) $<
