modified:   .gitignore 	new file:   complexnumbers.h 	new file:   gpu.cu 	new file:   gpu.h 	modified:   main.c 	modified:   makefile 	modified:   tiffman.c 	modified:   tiffman.h
Started doing successful cuda work. Can calculate the distances instantly.

--- a/src/makefile
+++ b/src/makefile
@@ -1,13 +1,13 @@
 CC=gcc -ansi
 CUDACC=nvcc
 
-Objs=main.o matrix.o cufft.o tiffman.o
+Objs=main.o matrix.o gpu.o tiffman.o
 
 BinaryName=gpuholography
 
 CFLAGS=-O2 -Wall -Werror -L/usr/local/cuda/lib64 -I. -I/usr/local/cuda/include -I/usr/local/lib -lcuda -lcudart -lm -ltiff
 LDFLAGS=-O2 -L/usr/local/lib  -L/usr/local/cuda/lib64 -lcudart -lcuda -ltiff -lm
-CUDACCFLAGS=-G -use_fast_math -arch=sm_20 --ptxas-options=-v -I. -I/usr/local/cuda/include -I/usr/local/cuda/lib64
+CUDACCFLAGS=-use_fast_math -arch=sm_20 --ptxas-options=-v -I. -I/usr/local/cuda/include -I/usr/local/cuda/lib64 -G -pg -g -lineinfo
 
 
 all: $(Objs) $(BinaryName)
@@ -19,7 +19,7 @@ all: $(Objs) $(BinaryName)
 	$(CUDACC) -c $(CUDACCFLAGS) $<
 
 $(BinaryName):
-	$(CUDACC) -o $(BinaryName) $(Objs) $(LDFLAGS)
+	$(CUDACC) -o $(BinaryName) $(Objs) $(LDFLAGS) $(CUDACCFLAGS)
 
 clean:
 	rm -f $(Objs) $(BinaryName)
