Rewritten most code, should all be working now, though there still might be a few physics related issues. Need to work with saijun on those. 	Trying to write to a file is difficult but not impossible, I am trying at the moment
	deleted:    dftandprop.cu
	deleted:    dftandprop.h
	deleted:    gpu.cu
	deleted:    gpu.h
	new file:   gpudistancegrid.cu
	new file:   gpudistancegrid.h
	new file:   gpufouriertransform.cu
	new file:   gpufouriertransform.h
	new file:   gpurefwavecalc.cu
	new file:   gpurefwavecalc.h
	new file:   gpusubdivref.cu
	new file:   gpusubdivref.h
	modified:   main.c
	modified:   makefile
	deleted:    matrix.c
	deleted:    matrix.h
	new file:   subtractimages.c
	new file:   subtractimages.h
	deleted:    tiffman.c
	deleted:    tiffman.h
	new file:   writetoimage.c
	new file:   writetoimage.h

--- a/src/makefile
+++ b/src/makefile
@@ -1,13 +1,12 @@
 CC=gcc -ansi
 CUDACC=nvcc
 
-Objs=main.o matrix.o gpu.o tiffman.o dftandprop.o
-
+Objs=main.o subtractimages.o gpudistancegrid.o gpurefwavecalc.o gpusubdivref.o gpufouriertransform.o writetoimage.o
 BinaryName=gpuholography
 
 CFLAGS=-O2 -Wall -L/usr/local/cuda/lib64 -I. -I/usr/local/cuda/include -I/usr/local/lib -lcuda -lcudart -lm -ltiff -lcufft
 LDFLAGS=-O2 -L/usr/local/lib  -L/usr/local/cuda/lib64 -lcudart -lcuda -ltiff -lm -lcufft
-CUDACCFLAGS=-use_fast_math -arch=sm_20 --ptxas-options=-v -I. -I/usr/local/cuda/include -I/usr/local/cuda/lib64 -G -pg -g -lineinfo
+CUDACCFLAGS=-use_fast_math -arch=sm_20 -I. -I/usr/local/cuda/include -I/usr/local/cuda/lib64 -G -g -lineinfo
 
 
 all: $(Objs) $(BinaryName)
