modified:   main.c 	modified:   makefile 	modified:   writetoimage.c 	modified:   writetoimage.h

--- a/src/makefile
+++ b/src/makefile
@@ -6,7 +6,7 @@ BinaryName=gpuholography
 
 CFLAGS=-O2 -Wall -L/usr/local/cuda/lib64 -I. -I/usr/local/cuda/include -I/usr/local/lib -lcuda -lcudart -lm -ltiff -lcufft
 LDFLAGS=-O2 -L/usr/local/lib  -L/usr/local/cuda/lib64 -lcudart -lcuda -ltiff -lm -lcufft
-CUDACCFLAGS=-use_fast_math -arch=sm_20 -I. -I/usr/local/cuda/include -I/usr/local/cuda/lib64 -G -g -lineinfo
+CUDACCFLAGS=-use_fast_math -arch=sm_20 -I. -I/usr/local/cuda/include -I/usr/local/cuda/lib64 -lineinfo
 
 
 all: $(Objs) $(BinaryName)
@@ -21,4 +21,4 @@ $(BinaryName):
 	$(CUDACC) -o $(BinaryName) $(Objs) $(LDFLAGS) $(CUDACCFLAGS)
 
 clean:
-	rm -f $(Objs) $(BinaryName)
+	rm -f $(Objs) $(BinaryName) *.tiff
