Sort of working version. Things seem to be progressing
	new file:   ../holography1.tif
	deleted:    Image.tif
	new file:   fftreducedhologram/abs.tiff
	new file:   fftreducedhologram/result.tiff
	new file:   fftreducedhologram/resultimag.tiff
	modified:   gpufouriertransform.cu
	modified:   gpufouriertransform.h
	new file:   gpupropagate.cu
	new file:   gpupropagate.h
	modified:   gpurefwavecalc.cu
	modified:   gpurefwavecalc.h
	deleted:    gpusubdivref.cu
	deleted:    gpusubdivref.h
	new file:   ifftreducedhologram/absifftresult.tiff
	new file:   ifftreducedhologram/imagifftresult.tiff
	new file:   ifftreducedhologram/realifftresult.tiff
	modified:   main.c
	modified:   makefile
	new file:   reducedhologram/absreducedhologram.tiff
	new file:   reducedhologram/imagreducedhologram.tiff
	new file:   reducedhologram/realreducedhologram.tiff
	new file:   referencewave/absrefresult.tiff
	new file:   referencewave/imagrefresult.tiff
	new file:   referencewave/realrefresult.tiff
	deleted:    subtractimages.c
	modified:   writetoimage.c
	modified:   writetoimage.h

--- a/src/makefile
+++ b/src/makefile
@@ -1,13 +1,12 @@
-CC=gcc -ansi
+CC=gcc -std=c99 
 CUDACC=nvcc
 
-Objs=main.o subtractimages.o gpudistancegrid.o gpurefwavecalc.o gpusubdivref.o gpufouriertransform.o writetoimage.o
+Objs=main.o gpudistancegrid.o gpurefwavecalc.o gpufouriertransform.o writetoimage.o gpupropagate.o
 BinaryName=gpuholography
 
-CFLAGS=-O2 -Wall -L/usr/local/cuda/lib64 -I. -I/usr/local/cuda/include -I/usr/local/lib -lcuda -lcudart -lm -ltiff -lcufft
+CFLAGS=-O2 -Wall -L/usr/local/cuda/lib64 -I. -I/usr/local/cuda/lib64 -I/usr/local/cuda/include -I/usr/local/lib -lcuda -lcudart -lm -ltiff -lcufft -Wextra
 LDFLAGS=-O2 -L/usr/local/lib  -L/usr/local/cuda/lib64 -lcudart -lcuda -ltiff -lm -lcufft
 CUDACCFLAGS=-use_fast_math -arch=sm_20 -I. -I/usr/local/cuda/include -I/usr/local/cuda/lib64 -G -g -lineinfo
-
 
 all: $(Objs) $(BinaryName)
 
@@ -18,7 +17,7 @@ all: $(Objs) $(BinaryName)
 	$(CUDACC) -c $(CUDACCFLAGS) $<
 
 $(BinaryName):
-	$(CUDACC) -o $(BinaryName) $(Objs) $(LDFLAGS) $(CUDACCFLAGS)
+	$(CUDACC) -o $(BinaryName) $(Objs) $(CUDACCFLAGS) $(LDFLAGS)
 
 clean:
-	rm -f $(Objs) $(BinaryName)
+	rm -f $(Objs) $(BinaryName) *.tiff
