OpenGl display now works, no real disk impact.
	new file:   ../NVIDIA Visual Profile
	modified:   fftreducedhologram/abs.tiff
	modified:   fftreducedhologram/result.tiff
	modified:   fftreducedhologram/resultimag.tiff
	modified:   gpufouriertransform.cu
	modified:   gpupropagate.cu
	modified:   ifftreducedhologram/absifftresult.tiff
	modified:   ifftreducedhologram/imagifftresult.tiff
	modified:   ifftreducedhologram/realifftresult.tiff
	modified:   main.c
	modified:   makefile
	modified:   reducedhologram/absreducedhologram.tiff
	modified:   reducedhologram/imagreducedhologram.tiff
	modified:   reducedhologram/realreducedhologram.tiff
	modified:   referencewave/absrefresult.tiff
	modified:   referencewave/imagrefresult.tiff
	modified:   referencewave/realrefresult.tiff
	modified:   writetoimage.c
	modified:   writetoimage.h

--- a/src/makefile
+++ b/src/makefile
@@ -4,20 +4,23 @@ CUDACC=nvcc
 Objs=main.o gpudistancegrid.o gpurefwavecalc.o gpufouriertransform.o writetoimage.o gpupropagate.o
 BinaryName=gpuholography
 
-CFLAGS=-O2 -Wall -L/usr/local/cuda/lib64 -I. -I/usr/local/cuda/lib64 -I/usr/local/cuda/include -I/usr/local/lib -lcuda -lcudart -lm -ltiff -lcufft -Wextra
-LDFLAGS=-O2 -L/usr/local/lib  -L/usr/local/cuda/lib64 -lcudart -lcuda -ltiff -lm -lcufft
+CFLAGS=-O2 -Wall -L/usr/local/cuda/lib64 -I. -I/usr/local/cuda/lib64 -I/usr/local/cuda/include -I/usr/local/lib -I/usr/lib -lcuda -lcudart -lm -ltiff -lcufft -lglfw -lGL -Wextra
+LDFLAGS=-O2 -L/usr/local/lib  -L/usr/local/cuda/lib64 -lcudart -lcuda -ltiff -lm -lcufft -lglfw -lGL 
 CUDACCFLAGS=-use_fast_math -arch=sm_20 -I. -I/usr/local/cuda/include -I/usr/local/cuda/lib64 -lineinfo
+
+SDL_CFLAGS := $(shell sdl-config --cflags)
+SDL_LDFLAGS := $(shell sdl-config --libs)
 
 all: $(Objs) $(BinaryName)
 
 %.o:	%.c
-	$(CC) $(CFLAGS) -c $<
+	$(CC) $(CFLAGS) $(SDL_CFLAGS) -c $<
 
 %.o: %.cu
-	$(CUDACC) -c $(CUDACCFLAGS) $<
+	$(CUDACC) -c $(CUDACCFLAGS) $(SDL_CFLAGS) $<
 
 $(BinaryName):
-	$(CUDACC) -o $(BinaryName) $(Objs) $(CUDACCFLAGS) $(LDFLAGS)
+	$(CUDACC) -o $(BinaryName) $(Objs) $(CUDACCFLAGS) $(SDL_CFLAGS) $(SDL_LDFLAGS) $(LDFLAGS)
 
 clean:
 	rm -f $(Objs) $(BinaryName) *.tiff
